# Torrent_Player

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
Google_Test/: CMakeLists.txt  bar_test.cpp  foo_test.cpp
Project_3_Qt/: widget.ui
Project_Qt/: CMakeLists.txt
lib/: CMakeLists.txt  bar.cpp  bar.h  main.cpp
src/: foo.cpp  foo.h
tests/: CMakeLists.txt  bar_test.cpp  foo_test.cpp
