
# tests/CMakeLists.txt
file(GLOB TEST_SOURCES "*.cpp")
file(GLOB SRC_SOURCES "../Project_1_Boost/bar.cpp")
file(GLOB LIB_SOURCES "../Project_2/*.cpp")

add_executable(MyTests ${TEST_SOURCES} ${SRC_SOURCES} ${LIB_SOURCES})
#target_link_libraries(MyTests gtest gtest_main)
# Свяжите библиотеки Boost и Google Test
target_link_libraries(MyTests Boost::asio Boost::regex Boost::algorithm Boost::headers gtest_main)

# Включите Google Test
include(GoogleTest)

gtest_discover_tests(MyTests)

